--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@ body {
 .learner-group-inputs {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 
 textarea {
-  margin-top: 16px;
   min-height: 60px;
   min-width: 250px;
+  margin-left: 40px;
+  margin-top: 10px;
 }
 
 input {
